# capacitiveChessEmbeddedFW

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TraceChess.JLinkScript  docker-compose.yml  main.c
.github/workflows/: main.yml
BSP/: CMakeLists.txt  FreeRTOSConfig.h  stm32l4xx_hal_conf.h
BSP/LED/: led.c  led.h
BSP/SMPS/: SMPS.c  SMPS.h
BSP/USB_CDC/: usbd_cdc_interface.c  usbd_cdc_interface.h  usbd_conf.c
BSP/buttons/: buttons.c  buttons.h
BSP/capacitiveDetection/: capacitive.c  capacitive.h
BSP/sharpMemoryLCD/: LS013B7DH03.c  LS013B7DH03.h
Segger/: CMakeLists.txt
